prodMetadata/src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Assets__c</fullName>
        <label>Assigned Assets</label>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Assigned_To__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Inventory__c</fullName>
        <formula>CASE(RecordType.Name, &apos;Other Merch&apos;, Stocked_Inventory__c - Fulfilled_Requests__c,
&apos;Apparel&apos;, Starting_Amount__c - Fulfilled_Requests__c,
&apos;Hardware&apos;, Unassigned_Assets__c,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfilled_Requests__c</fullName>
        <label>Fulfilled Requests</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inventory_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Category</label>
        <referenceTo>Inventory_Category__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Large_remaining__c</fullName>
        <formula>Large_stocked__c - Large_requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Large - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_requested__c</fullName>
        <label>Large - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Large_stocked__c</fullName>
        <label>Large - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oscar Mike</fullName>
                </value>
                <value>
                    <fullName>Undefeated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medium_remaining__c</fullName>
        <formula>Medium_stocked__c - Medium_requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_requested__c</fullName>
        <label>Medium - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Medium</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Medium_stocked__c</fullName>
        <label>Medium - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Medium</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Restock__c</fullName>
        <formula>IF(AND(Small_stocked__c &gt; 0, Small_requested__c &gt; 0, Small_remaining__c &lt;= 30, RecordType.Name = &apos;Apparel&apos;), &apos;Small&apos;,
    IF(AND(Medium_stocked__c &gt; 0, Medium_requested__c &gt; 0, Medium_remaining__c &lt;= 30, RecordType.Name = &apos;Apparel&apos;), &apos;Medium&apos;,
    IF(AND(Large_stocked__c &gt; 0, Large_requested__c &gt; 0, Large_remaining__c &lt;= 30, RecordType.Name = &apos;Apparel&apos;), &apos;Large&apos;,
    IF(AND(X_Large_stocked__c &gt; 0, X_Large_requested__c &gt; 0, X_Large_remaining__c &lt;= 30, RecordType.Name = &apos;Apparel&apos;), &apos;X-Large&apos;,
    IF(AND(XX_Large_stocked__c &gt; 0, XX_Large_requested__c &gt; 0, XX_Large_remaining__c &lt;=30, RecordType.Name = &apos;Apparel&apos;), &apos;XX-Large&apos;,
    null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_remaining__c</fullName>
        <formula>Small_stocked__c - Small_requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Small - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Small_requested__c</fullName>
        <label>Small - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Small</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Small_stocked__c</fullName>
        <label>Small - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Small</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Starting_Amount__c</fullName>
        <formula>IF(RecordType.Name = &apos;Apparel&apos;,X_Small_Stocked__c + Small_stocked__c + Medium_stocked__c + Large_stocked__c + X_Large_stocked__c + XX_Large_stocked__c + XXX_Large_Stocked__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stocked_Inventory__c</fullName>
        <label>Stocked Inventory</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Other Merch, Stock Apparel</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <label>Total Assets</label>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hoodie</fullName>
                </value>
                <value>
                    <fullName>LS shirt</fullName>
                </value>
                <value>
                    <fullName>Polo shirt</fullName>
                </value>
                <value>
                    <fullName>T-shirt</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Bracelet</fullName>
                </value>
                <value>
                    <fullName>Coin</fullName>
                </value>
                <value>
                    <fullName>Flag</fullName>
                </value>
                <value>
                    <fullName>Koozie</fullName>
                </value>
                <value>
                    <fullName>Logo folder</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Pin</fullName>
                </value>
                <value>
                    <fullName>Policy Agenda</fullName>
                </value>
                <value>
                    <fullName>Table skirt</fullName>
                </value>
                <value>
                    <fullName>Tent</fullName>
                </value>
                <value>
                    <fullName>Tote bag</fullName>
                </value>
                <value>
                    <fullName>Veteran Crisis Line card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unassigned_Assets__c</fullName>
        <label>Unassigned Assets</label>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Assigned_To__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>XXX_Large_Remaining__c</fullName>
        <formula>XXX_Large_Stocked__c - XXX_Large_Stocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXX-Large - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XXX_Large_Requested__c</fullName>
        <label>XXX-Large - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>XXX-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>XXX_Large_Stocked__c</fullName>
        <label>XXX-Large - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>XXX-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>XX_Large_remaining__c</fullName>
        <formula>XX_Large_stocked__c - XX_Large_requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XX-Large - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XX_Large_requested__c</fullName>
        <label>XX-Large - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>XX-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>XX_Large_stocked__c</fullName>
        <label>XX-Large - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>XX-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X_Large_remaining__c</fullName>
        <formula>X_Large_stocked__c - X_Large_requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X-Large - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_Large_requested__c</fullName>
        <label>X-Large - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>X-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X_Large_stocked__c</fullName>
        <label>X-Large - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>X-Large</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X_Small_Remaining__c</fullName>
        <formula>X_Small_Stocked__c - X_Small_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X-Small - Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_Small_Requested__c</fullName>
        <label>X-Small - Requested</label>
        <summarizedField>Line_Item__c.Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Request Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>X-Small</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Fulfilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X_Small_Stocked__c</fullName>
        <label>X-Small - Stocked</label>
        <summarizedField>Line_Item__c.Added__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stock Apparel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>X-Small</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isLowStock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>isLowStock</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <recordTypes>
        <fullName>Apparel</fullName>
        <active>true</active>
        <description>Record type for items of clothing (tshirts, sweatshirts, etc.)</description>
        <label>Apparel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <description>Record type for items used internally such as computers and phones</description>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Merch</fullName>
        <active>true</active>
        <description>Record type for un-sized merchandise such as hats and buttons</description>
        <label>Other Merch</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequireDescriptionForMiscInventory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;Miscellaneous&apos;) &amp;&amp;
ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please enter a description for miscellaneous inventory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireYearForPolicyAgendaAnnualReport</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Year__c,&apos;&apos;) &amp;&amp;
(ISPICKVAL(Type__c, &apos;Policy Agenda&apos;) ||
 ISPICKVAL(Type__c, &apos;Annual Report&apos;))</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Please add the year of the policy agenda or annual report.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>isLowStock_1or0</fullName>
        <active>true</active>
        <errorConditionFormula>isLowStock__c != 0 &amp;&amp;
isLowStock__c != 1</errorConditionFormula>
        <errorDisplayField>isLowStock__c</errorDisplayField>
        <errorMessage>isLowStock can only be 0 or 1</errorMessage>
    </validationRules>
</CustomObject>